# LightStim

./: .gitignore  AutoDEM_Revision_Plan.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  Reorg_plan.md  extract_frontend_data.py  feedback.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  review.md
.github/: dependabot.yml
api/: main.py
arxiv/: intro_draft.md
benchmarks/: LS_distillation_result.md  distillation_results.ipynb  run_distillation_simulations.py  steane_distillation_d3_p1e-3.stim  steane_distillation_d3_p1e-4.stim  zzzzz_vs_memory.py
decompose/: codes_q.py  gong_circuit.py
docs/: TRACKER_LOGIC.md  decoder_selection_guide.md  endpoint_boundary_limitation.md  engineering_chronicle.md  getting_started.md  mwpf_user_guide.md  simulation_pipeline.md  tracker_stabilizer_transition.md  user_guide.md  vision.md
docs/api/: ir.md  (+1 more)
eval/: distillation_results.ipynb  run_distillation_simulations.py
example_circuit/: run_zzzzz_vs_memory.py
experiments/: CNOT_LS.py  CNOT_trans.py  fold_transversal.py  ghz.py  memory.py  state_Y_injection.py  state_injection.py  two_patch_LS_unrotated.py
notebooks/: README.md  define_by_run.ipynb  fold_transversal.ipynb  injtest.txt  memory_experiment.ipynb  qec_system_intro.ipynb  scheduling_visualization.ipynb  se_scheduling.ipynb  test_LS.ipynb  test_LS_distillation.ipynb  test_TG_distillation_no_inject.ipynb  test_Y_injection.ipynb  test_decoder.ipynb  test_ghz.ipynb  test_injection.ipynb  test_injection3.ipynb  test_qec_code_info.ipynb  test_trans_CNOT.ipynb  test_unrotated_multi_coupler.ipynb
paper_artifact/: README.md
server/: README.md  main.py
skills/: README.md  SKILL.md
src/: Next_step.md
tests/: README.md  conftest.py  gen_cnot_viz.py  gen_ls_xx_viz.py  gen_stim_code_figure.py  test_api.py  test_back_propagated_pauli.py  test_circuit_build.py  test_export.py  test_mwpf_visualization.py  test_pipeline.py  test_protocols.py  test_run_logical_ops.py  test_run_memory.py  test_se_scheduling.py  test_simulation_backend_quality.py  test_xzzx_code.py  verify_hq.py  (+1 more)
(+514 files in other folders)
