[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lightstim"
version = "0.1.0"
description = "QEC simulation framework built on Stim"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Xiang Fang"}
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.20.0",
    "stim>=1.15.0",
    "sinter>=1.15.0",
    "PyMatching>=2.0.0",
    "pandas",
]

[project.optional-dependencies]
plot = [
    "matplotlib",
    "seaborn",
]
server = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]
decoders = [
    "stimbposd",
    "mwpf",
    "frozendict",
    "frozenlist",
]
gpu = [
    "cudaq-qec",
]
dev = [
    "pytest",
    "jupyter",
    "ipykernel",
    "matplotlib",
    "seaborn",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lightstim*"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring a CUDA device",
]
